Try to fix service tests